tests/fixtures/stl/errors/test_syntax_error.stl
// Error: missing closing brace
prompt broken {
  is {
    name is text<length=10>;

export broken as main;
